# gjoystick

./: GJoystick-1.0.h  README.md  joystick_listener.c  joystick_manager.c  meson.build
test/: joystick.py
